--- a/patents.html
+++ b/patents.html
@@ -28,7 +28,7 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li ><a href="carrer.html">Work Experience</a></li>
+        <li ><a href="career.html">Work Experience</a></li>
         <li ><a href="publications.html">Publications</a></li>
         <li ><a href="education.html">Education</a></li>
         <li ><a href="patents.html">Patents</a></li>
