--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
         <li ><a href="publications.html">Publications</a></li>
         <li ><a href="education.html">Education</a></li>
         <li ><a href="patents.html">Patents</a></li>
-        <li ><a href="patents.html">Teaching</a></li>
+        <li ><a href="teaching.html">Teaching</a></li>
       </ul>
     </div>
          </div>
