--- a/career.html
+++ b/career.html
@@ -65,7 +65,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                                 Development and implementation of algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. Worked both with very constrained embedded systems, as well as with powerful computing units equiped with cutting edge hardware accelerators for computer vision and machine learning. Won the Hi5 Award 4 times in a course of ~3 years as a result of 23 filed patent applications.
+                                 Development and implementation of algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. Worked both with very constrained embedded systems, as well as with powerful computing units equipped with cutting edge hardware accelerators for computer vision and machine learning. Won the Hi5 Award 4 times in a course of ~3 years as a result of 23 filed patent applications.
                               </p>
                            </div>
                         </div>
