--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="hline-w"></div>
                   <p>
                      Rodrigo Aldana-López <br>
-                     rodrigo.aldana.lopez@gmail.com <br>
+                     rodrigo.aldana.lopez [at] gmail [dot] com <br>
                   </p>
                </div>
             </div>
