--- a/publications.html
+++ b/publications.html
@@ -175,7 +175,7 @@
                   <div class="hline-w"></div>
                   <p>
                      Rodrigo Aldana-López <br>
-                     rodrigo.aldana.lopez@gmail.com <br>
+                     rodrigo.aldana.lopez [at] gmail [dot] com <br>
                   </p>
                </div>
             </div>
