--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                               </a>&ensp;
                               <a href="https://github.com/RodrigoAldana">
                               <img alt="github" src="assets/github.png" width="35" height="30">
-                              </a>
+                              </a>&ensp;
                               <a href="https://orcid.org/0000-0001-6939-6523">
                               <img alt="github" src="assets/orcid.png" width="35" height="30">
-                              </a>
+                              </a>&ensp;
                               <a href="https://publons.com/researcher/4151063/rodrigo-aldana-lopez/">
                               <img alt="publons" src="assets/publons.png" width="35" height="30">
                               </a>
