--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,10 @@
                <hr>
                <br>
                <div class="pub_list">
+                  <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDCHO: High order exact dynamic consensus.</b>”. <i>Automatica</i>, 2021.<br>
+                     [<a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
+                  </p>
+                  <br>
                   <p> M. A. Trujillo, R. Aldana-López, D. Gómez-Gutiérrez, M. Defoort, J. Ruiz-León, H. M. Becerra  , “<b> Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems.</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
                      [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
                   </p>
