--- a/publications.html
+++ b/publications.html
@@ -72,11 +72,11 @@
                <hr>
                <br>
                <div class="pub_list">
-                  <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDCHO: High order exact dynamic consensus.</b>”. <i>Automatica</i>, 2021.<br>
+                  <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDCHO: High order exact dynamic consensus</b>”. <i>Automatica</i>, 2021.<br>
                      [<a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
                   </p>
                   <br>
-                  <p> M. A. Trujillo, R. Aldana-López, D. Gómez-Gutiérrez, M. Defoort, J. Ruiz-León, H. M. Becerra  , “<b> Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems.</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
+                  <p> M. A. Trujillo, R. Aldana-López, D. Gómez-Gutiérrez, M. Defoort, J. Ruiz-León, H. M. Becerra.“<b> Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
                      [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
                   </p>
                   <br>
@@ -93,10 +93,10 @@
                <hr>
                <br>
                <div class="pub_list">
-                  <p> Hernan Haimovich, Richard Seeber, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy.</b>”. <i>IEEE Control Systems Letters </i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
+                  <p> Hernan Haimovich, Richard Seeber, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters </i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
                   </p>
                   <br>
-                  <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b> A predefined-time first-order exact differentiator based on time-varying gains.</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
+                  <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Miguel A. Trujillo, Manuel Navarro-Gutiérrez, Javier Ruiz-León, Hector M. Becerra, “<b> A predefined-time first-order exact differentiator based on time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control</i>, 2021.<br>[<a style="color:blue" href="publications/ijrnc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2104.02140">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rnc.5536">publisher link</a>]
                   </p>
                   <br>
                </div>
@@ -104,13 +104,13 @@
                <hr>
                <br>
                <div class="pub_list">
-                  <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b> Generating new classes of fixed-time stable systems with predefined upper bound for the settling time.</b>”. <i>International Journal of Control </i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
+                  <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Esteban Jiménez-Rodríguez, Juan Diego Sánchez-Torres, Michael Defoort, “<b> Generating new classes of fixed-time stable systems with predefined upper bound for the settling time</b>”. <i>International Journal of Control </i>, 2021.<br>[<a style="color:blue" href="publications/ijc2021.pdf">pdf</a> | <a style="color:blue" href="publications/ijc2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1901.02782">arxiv</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207179.2021.1936190?journalCode=tcon20">publisher link</a>]
                   </p>
                   <br>
-                  <p> Juan Diego Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Predefined-time integral sliding mode control of second-order systems.</b>”. <i>International Journal of Systems Science </i>, 2020.<br>[<a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion.">publisher link</a>]
+                  <p> Juan Diego Sánchez-Torres, Aldo Jonathan Muñoz-Vázquez, Michael Defoort, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b> Predefined-time integral sliding mode control of second-order systems</b>”. <i>International Journal of Systems Science </i>, 2020.<br>[<a style="color:blue" href="publications/ijss2020.txt">bibtex</a> | <a style="color:blue" href="https://www.tandfonline.com/doi/abs/10.1080/00207721.2020.1815893#:~:text=Predefined%2Dtime%20integral%20sliding%20mode%20control%20of%20second%2Dorder%20systems,-Full%20Article&text=This%20manuscript%20introduces%20the%20design,class%20of%20second%2Dorder%20systems.&text=Then%2C%20the%20system%20dynamics%20evolve,during%20the%20integral%20sliding%20motion">publisher link</a>]
                   </p>
                   <br>
-                  <p> Aldana-López, R, Gómez-Gutiérrez, D, Jiménez-Rodríguez, E, Sánchez-Torres, JD, Defoort, M, “<b> Enhancing the settling time estimation of a class of fixed-time stable systems.</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
+                  <p> Aldana-López, R, Gómez-Gutiérrez, D, Jiménez-Rodríguez, E, Sánchez-Torres, JD, Defoort, M, “<b> Enhancing the settling time estimation of a class of fixed-time stable systems</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2019.<br>[<a style="color:blue" href="publications/ijrnc2019b.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2019b.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/1809.07012">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/full/10.1002/rnc.4600">publisher link</a>]
                   </p>
                   <br>
                </div>
@@ -118,10 +118,10 @@
                <hr>
                <br>
                <div class="pub_list">
-                  <p> J. Valencia-Velasco, O. Longoria-Gandara, R. Aldana-Lopez and L. Pizano-Escalante, “<b> Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices.</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
+                  <p> J. Valencia-Velasco, O. Longoria-Gandara, R. Aldana-Lopez and L. Pizano-Escalante, “<b> Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
                   </p>
                   <br>
-                  <p> Jose M., Valencia, Aldana-López, Rodrigo, Longoria-Gandara, Omar, Pizano-Escalante, Luis, “<b> Digital linear GFSK demodulator for IoT devices.</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
+                  <p> Jose M., Valencia, Aldana-López, Rodrigo, Longoria-Gandara, Omar, Pizano-Escalante, Luis, “<b> Digital linear GFSK demodulator for IoT devices</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
                   </p>
                   <br>
                </div>
@@ -136,23 +136,23 @@
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                   <div class="pub_list">
-                     <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> Attention vs. precision: latency scheduling for uncertainty resilient control systems.</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
+                     <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
                         [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
                      </p>
                      <br>
-                     <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDC: Exact Dynamic Consensus.</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                     <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b> EDC: Exact Dynamic Consensus</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
                         [<a style="color:blue" href="publications/ifac2020.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320313264">publisher link</a>]
                      </p>
                      <br>
-                     <p> Esteban Jiménez-Rodríguez and Rodrigo Aldana-López and Juan D. Sánchez-Torres and David Gómez-Gutiérrez and Alexander G. Loukianov, “<b> Consistent Discretization of a Class of Predefined-Time Stable Systems.</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
+                     <p> Esteban Jiménez-Rodríguez and Rodrigo Aldana-López and Juan D. Sánchez-Torres and David Gómez-Gutiérrez and Alexander G. Loukianov, “<b> Consistent Discretization of a Class of Predefined-Time Stable Systems</b>”. <i>21st, IFAC World Congress</i>, 2020.<br>
                         [<a style="color:blue" href="publications/ifac2020b.pdf">pdf</a> | <a style="color:blue" href="publications/ifac2020b.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S2405896320311307">publisher link</a>]
                      </p>
                      <br>
-                     <p> Aldana, Rodrigo and Campos-Macías, Leobardo and Zamora, Julio and Gomez-Gutierrez, David and Cruz, Adan, “<b> Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach.</b>”. <i>I24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
+                     <p> Aldana, Rodrigo and Campos-Macías, Leobardo and Zamora, Julio and Gomez-Gutierrez, David and Cruz, Adan, “<b> Dynamic Learning Rate for Neural Networks: A Fixed-Time Stability Approach</b>”. <i>I24th International Conference on Pattern Recognition (ICPR)</i>, 2018.<br>
                         [<a style="color:blue" href="publications/icpr2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8546084">publisher link</a>]
                      </p>
                      <br>
-                     <p> J. Valencia-Velasco, R. Aldana-Lopez and O. Longoria-Gandara, “<b> Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach.</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
+                     <p> J. Valencia-Velasco, R. Aldana-Lopez and O. Longoria-Gandara, “<b> Alternative Viterbi Detection Metrics for GFSK Receivers: A Hardware Reduction Approach</b>”. <i>IEEE 10th Latin-American Conference on Communications</i>, 2018.<br>
                         [<a style="color:blue" href="publications/latin2018.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/8613225">publisher link</a>]
                      </p>
                      <br>
