Corrected some typos. Added TCASII2022 paper

--- a/patents.html
+++ b/patents.html
@@ -160,7 +160,7 @@
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
-                  <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> ardware Accelerator For Online Estimation  </b>”. <i>Patent application US2019050370 (A1)</i>, 2019 United States.<br>
+                  <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> Hardware Accelerator For Online Estimation  </b>”. <i>Patent application US2019050370 (A1)</i>, 2019 United States.<br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=18&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019050370A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
