--- a/career.html
+++ b/career.html
@@ -65,7 +65,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                                 Development and implementation of algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. Worked both with very constrained embedded systems, as well as with powerful computing units equipped with cutting edge hardware accelerators for computer vision and machine learning. Won the Hi5 Award 4 times in a course of ~3 years as a result of 23 filed patent applications.
+                                 I was in charge of developing and implementing algorithms for Online Trajectory Planning and robust tracking control on palm-sized quadcopters. I worked with very constrained embedded systems and powerful computing units equipped with advanced hardware accelerators for computer vision and machine learning. I won the Hi5 Award 4 times in ~3 years as a result of 23 filed patent applications.
                               </p>
                            </div>
                         </div>
@@ -90,7 +90,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                                 Developed multiple reference designs for Bluetooth Low Energy using Freescale's boards and software stacks.
+                                 I developed multiple reference designs for Bluetooth Low Energy using Freescale's boards and software stacks.
                               </p>
                            </div>
                         </div>
@@ -115,7 +115,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                                 Participated in the research for the design of a new GFSK demodulator for Bluetooth with <a  class="several" href="https://iteso.mx/web/general/detalle?group_id=3084565">Dr. Omar Longoria</a>
+                                 I participated in the research for the design of a new GFSK demodulator for Bluetooth with <a  class="several" href="https://iteso.mx/web/general/detalle?group_id=3084565">Dr. Omar Longoria</a>
                               </p>
                            </div>
                         </div>
@@ -140,7 +140,7 @@
                            </p>
                            <div class="parent">
                               <p class="text-muted">
-                                 Participated in a research work about the study of electrostatic fields as stochastic processes in precense of uncertainty with <a  class="several" href="https://scholar.google.es/citations?user=ZgvoFhAAAAAJ&hl=es">Dr. Gabriel Gonzales.</a>
+                                 I participated in a research work about the study of electrostatic fields as stochastic processes in precense of uncertainty with <a  class="several" href="https://scholar.google.es/citations?user=ZgvoFhAAAAAJ&hl=es">Dr. Gabriel Gonzales.</a>
                               </p>
                            </div>
                         </div>
