--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                            <center>
                               <a href="mailto:rodrigo.aldana.lopez@gmail.com">
                               <img alt="email" src="assets/gmail.png" width="38" height="25">
-                              </a>&ensp; 
+                              </a>&ensp;&ensp;
                               <a href="https://scholar.google.com/citations?user=mmp6hHQAAAAJ&hl=es">
                               <img alt="google_scholar" src="assets/google_scholar.png" width="37" height="35">
                               </a>&ensp;&ensp;
