--- a/patents.html
+++ b/patents.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title> Rodrigo Aldana-López - Publications </title>
+      <title> Rodrigo Aldana-López - Patents </title>
       <!-- stylesheets -->
       <link rel="stylesheet" href="/css/site.css">
       <link media="all" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
       <div id="blue">
          <div class="container">
             <div class="row">
-               <h3>Publications</h3>
+               <h3>Patents</h3>
             </div>
             <!-- /row -->
          </div>
