--- a/patents.html
+++ b/patents.html
@@ -56,6 +56,10 @@
          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                <div class="pub_list">
+                  <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> Hardware Accelerator For Online Estimation  </b>”. <i>Patent US11119507 (B2)</i>, 2021 United States.<br>
+                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=18&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019050370A1&KC=A1">Espacenet link</a>]
+                  </p>
+                  <br>
                   <p> Campos Macias, Leobardo, ; Marshall, Carl S, ; Arditti Ilitzky, David, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, ; Zamora Esquivel, Julio C, ; De La Guardia Gonzales, Rafael, ; Aldana Lopez, Rodrigo, “<b>Projection-based Cooperative Collision Avoidance</b>”. <i>Patent US10733896 (B2)</i>, 2021 United States. Also published as DE112019001716 (T5), CN111542867 (A), US2019051194 (A1), WO2019190692 (A1)<br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=2&ND=3&adjacent=true&locale=en_EP&FT=D&date=20210128&CC=DE&NR=112019001716T5&KC=T5">Espacenet link</a>]
                   </p>
@@ -158,10 +162,6 @@
                   <br>
                   <p>Aldana López, Rodrigo, ; Campos Macías, Leobardo Emmanuel, ; Zamora Esquivel, Julio Cesar, ; Cruz Vargas, Jesús Adán, ; Gómez Gutiérrez, David, “<b>Methods And Apparatus For Training A Neural Network </b>”. <i>Patent application US2019095794 (A1)</i>, 2020 United States. Also published as EP3757687 (A1)  <br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=8&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201230&CC=EP&NR=3757687A1&KC=A1">Espacenet link</a>]
-                  </p>
-                  <br>
-                  <p>Parra Vilchis, Jose Ignacio, ; Aldana Lopez, Rodrigo, ; Gomez Gutierrez, David, ; De La Guardia Gonzalez, Rafael, ; Campos Macias, Leobardo, “<b> Hardware Accelerator For Online Estimation  </b>”. <i>Patent application US2019050370 (A1)</i>, 2019 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=18&ND=3&adjacent=true&locale=en_EP&FT=D&date=20190214&CC=US&NR=2019050370A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
                </div>
