--- a/patents.html
+++ b/patents.html
@@ -71,9 +71,13 @@
                   <p> De La Guardia Gonzalez, Rafael, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Gomez Gutierrez, David, ; Guzman Leguel, Anthony Kyung, ; Parra Vilchis, Jose Ignacio, “<b>Cooperative Mapping For Autonomous Vehicles, Robots Or Multi-agent Systems</b>”. <i>Patent US11004332 (B2)</i>, 2020 United States.<br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20200430&CC=US&NR=2020135014A1&KC=A1">Espacenet link</a>]
                   </p>
+                  <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>US11249492 (B2)</i>, 2022 United States. Also published as DE102020105045 (A1), US2019220043 (A1)  <br>
+                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=5&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
+                  </p>
+                  <br>
                   <br>
                   <p> Parra Vilchis, Jose I, ; Guzman Leguel, Anthony K, ; Gutierrez, David Gomez, ; Campos Macias, Leobardo E, ; Gonzalez, Rafael De La Guardia, ; Lopez, Rodrigo Aldana, “<b>Decentralized Synchronization Of Multiple Agents</b>”. <i>Patent US10763868 (B2)</i>, 2020 United States.<br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=9&ND=3&adjacent=true&locale=en_EP&FT=D&date=20191024&CC=US&NR=2019326916A1&KC=A1">Espacenet link</a>]
+                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=7&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
                   <p> Cordourier Maruri, Hector, ; Huang, Jonathan, ; Lopez Meyer, Paulo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Parra Vilchis, Jose, ; Camacho Perez, Jose, ; Zamora Esquivel, Julio, “<b>Systems, Apparatus, And Methods For Drone Audio Noise Reduction</b>”. <i>Patent US10692481 (B2)</i>, 2019 United States. Also published as CN109754815 (A),   DE102018124769 (A1), US10290293 (B2), US2019043465 (A1).<br>
@@ -146,10 +150,6 @@
                   <br>
                   <p> Campos Macias, Leobardo, ; Aldana Lopez, Rodrigo, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Parra Vilchis, Jose, “<b>Methods And Apparatus For Dynamically Routing Robots Based On Exploratory On-board Mapping. </b>”. <i>Patent application US2019220020 (A1)</i>, 2020 United States. Also published as DE102020104358 (A1)  <br>
                      [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=4&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020104358A1&KC=A1">Espacenet link</a>]
-                  </p>
-                  <br>
-                  <p>Zamora Esquivel, Julio, ; Aldana Lopez, Rodrigo, ; Campos Macias, Leobardo, ; Cruz Vargas, Jesus, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Macias Garcia, Edgar, “<b>Methods And Apparatus To Facilitate Autonomous Navigation Of Robotic Devices. </b>”. <i>Patent application US2019220043 (A1)</i>, 2020 United States. Also published as DE102020105045 (A1)  <br>
-                     [<a style="color:blue" href="https://worldwide.espacenet.com/publicationDetails/biblio?II=5&ND=3&adjacent=true&locale=en_EP&FT=D&date=20201001&CC=DE&NR=102020105045A1&KC=A1">Espacenet link</a>]
                   </p>
                   <br>
                   <p>ZXue, Feng, ; Akdeniz, Mustafa, ; Suh, Seong-youp John, ; Bai, Jingwen, ; Yeh, Shu-ping, ; Aldana Lopez, Rodrigo, ; Alban, Eduardo, ; Arditti Ilitzky, David, ; Auzas, Philippe, ; Byrne, Jonathan, ; Campos Macias, Leobardo, ; Davis, Mark, ; De La Guardia Gonzalez, Rafael, ; Gomez Gutierrez, David, ; Huusari, Timo, ; Jackson, Bradley Alan, ; Karella, Ranganadh, ; Kasturi, Sreenivas, ; Ke, Mengkun, ; Liao, Ching-yu, ; Shi, Tiefeng, ; Talwar, Shilpa, ; Tong, Daniel, ; Yiu, Candy, “<b>Unmanned Aerial Vehicle Communication. </b>”. <i>Patent application WO2020113062 (A1)</i>, 2020 World Intellectual Property Organization. Also published as DE102020105045 (A1)  <br>
