--- a/publications.html
+++ b/publications.html
@@ -72,8 +72,11 @@
                <hr>
                <br>
                <div class="pub_list">
+                  <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b>REDCHO: Robust Exact Dynamic Consensus of High Order</b>”. <i>Automatica</i>, 2022.<br> [<a style="color:blue" href="publications/automatica2022.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2204.12344">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S0005109822001686?via%3Dihub">publisher link</a>]
+                  </p>
+                  <br>
                   <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b>EDCHO: High order exact dynamic consensus</b>”. <i>Automatica</i>, 2021.<br>
-                     [<a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
+                     [<a style="color:blue" href="publications/automatica2021.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2202.03012">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
                   </p>
                   <br>
                   <p> M. A. Trujillo, R. Aldana-López, D. Gómez-Gutiérrez, M. Defoort, J. Ruiz-León, H. M. Becerra.“<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
