corrected career dates

--- a/career.html
+++ b/career.html
@@ -129,7 +129,7 @@
                      </div>
                      <div class="timeline-panel">
                         <div class="timeline-heading">
-                           <h4><span class="small-capitals">2014</h4>
+                           <h4><span class="small-capitals">2014 - 2015</h4>
                            <h4 class="subheading">
                               <p class="blue-text"><span class="big">Research Intern (Math Department)</span></p>
                            </h4>
