updated publons to WoS

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                               <a href="https://orcid.org/0000-0001-6939-6523">
                               <img alt="orcid" src="assets/orcid.png" width="35" height="30">
                               </a>&ensp;
-                              <a href="https://publons.com/researcher/4151063/rodrigo-aldana-lopez/">
+                              <a href="https://www.webofscience.com/wos/author/record/AAH-5642-2020">
                               <img alt="publons" src="assets/publons.png" width="35" height="30">
                               </a>
                            </center>
