--- a/publications.html
+++ b/publications.html
@@ -96,6 +96,9 @@
                <hr>
                <br>
                <div class="pub_list">
+				  <p> Rodrigo Aldana-López, Richard Seeber, David Gómez-Gutiérrez, Marco Tulio Angulo,Michael Defoort, “<b>A redesign methodology generating predefined-time differentiators with bounded time-varying gains</b>”. <i>International Journal of Robust and Nonlinear Control </i>, 2022.<br>[<a style="color:blue" href="publications/ijrnc2022.pdf">pdf</a> | <a style="color:blue" href="publications/ijrnc2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.06429">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/10.1002/rnc.6315">publisher link</a>]
+                  </p>
+                  <br>
                   <p> Hernan Haimovich, Richard Seeber, Rodrigo Aldana-López, David Gómez-Gutiérrez, “<b>Differentiator for Noisy Sampled Signals with Best Worst-Case Accuracy</b>”. <i>IEEE Control Systems Letters </i>, 2021.<br>[<a style="color:blue" href="publications/icsl2021.pdf">pdf</a> | <a style="color:blue" href="publications/icsl2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2106.05320">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/abstract/document/9448332">publisher link</a>]
                   </p>
                   <br>
