--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,9 @@
                <hr>
                <br>
                <div class="pub_list">
+                  <p> Rodrigo Aldana-López, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
+                  </p>
+                  <br>
                   <p> Rodrigo Aldana-López, Rosario Aragüés, Carlos Sagüés, “<b>REDCHO: Robust Exact Dynamic Consensus of High Order</b>”. <i>Automatica</i>, 2022.<br> [<a style="color:blue" href="publications/automatica2022.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2204.12344">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/pii/S0005109822001686?via%3Dihub">publisher link</a>]
                   </p>
                   <br>
