--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
                      [<a style="color:blue" href="publications/jfr2020.pdf">pdf</a> | <a style="color:blue" href="publications/jfr2020.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=Wq0e7vF6nZM&feature=youtu.be">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1906.08839">arxiv</a> | <a style="color:blue" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/rob.21959">publisher link</a>]
                   </p>
                   <br>
-                  <p> Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters </i>, 2017.<br>
+                  <p> Leobardo Campos-Macías, David Gómez-Gutiérrez, <b>Rodrigo Aldana-López</b>, Rafael de la Guardia, José I. Parra-Vilchis, “<b>A Hybrid Method for Online Trajectory Planning of Mobile Robots in Cluttered Environments</b>”. <i>IEEE Robotics and Automation Letters </i>, 2017.<br>
                      [<a style="color:blue" href="publications/ral2017.pdf">pdf</a> | <a style="color:blue" href="publications/ral2017.txt">bibtex</a> | <a style="color:blue" href="https://www.youtube.com/watch?v=DJ1IZRL5t1Q&t=1s">video</a> | <a style="color:blue" href="https://arxiv.org/abs/1908.08493">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/7822897">publisher link</a>]
                   </p>
                   <br>
@@ -82,7 +82,7 @@
                      [<a style="color:blue" href="publications/automatica2021.pdf">pdf</a> | <a style="color:blue" href="publications/automatica2021.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2202.03012">arxiv</a> | <a style="color:blue" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109821002703">publisher link</a>]
                   </p>
                   <br>
-                  <p> Miguel Trujillo, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Michael Defoort, Javier Ruiz-León, Hector Becerra.“<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
+                  <p> Miguel Trujillo, <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Michael Defoort, Javier Ruiz-León, Hector Becerra, “<b>Autonomous and non-autonomous fixed-time leader–follower consensus for second-order multi-agent systems</b>”. <i>Nonlinear Dynamics</i>, 2020.<br>
                      [<a style="color:blue" href="publications/nody2020.txt">bibtex</a> | <a style="color:blue" href="https://link.springer.com/article/10.1007/s11071-020-06075-7">publisher link</a>]
                   </p>
                   <br>
@@ -130,7 +130,7 @@
                   <p> Abisaí Ramírez-Pérez, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Jose M. Valencia-Velasco, Luis Pizano-Escalante, Ramon Parra-Michel, “<b>Modular Arithmetic CPM for SDR Platforms</b>”. <i>IEEE Transactions on Circuits and Systems II: Express Briefs </i>, 2022.<br>[<a style="color:blue" href="publications/tcasii2022.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9684561">publisher link</a>]
                   </p>
                   <br>
-                  <p> J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and L. Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
+                  <p> J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and Luis Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
                   </p>
                   <br>
                   <p> Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications </i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
