--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,9 @@
                <hr>
                <br>
                <div class="pub_list">
+                  <p> Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Invited paper to the Special Issue Advanced Motion Control of Multiple Robots, Machines</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
+                  </p>
+                  <br>
                   <p> <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
                   </p>
                   <br>
@@ -133,7 +136,7 @@
                   <p> J. Valencia-Velasco, O. Longoria-Gandara, <b>Rodrigo Aldana-López</b> and Luis Pizano-Escalante, “<b>Low-Complexity Maximum-Likelihood Detector for IoT BLE Devices</b>”. <i>IEEE Internet of Things Journal </i>, 2020.<br>[<a style="color:blue" href="publications/iot2020.txt">bibtex</a>| <a style="color:blue" href="https://ieeexplore.ieee.org/document/8962324">publisher link</a>]
                   </p>
                   <br>
-                  <p> Jose M. Valencia-Velasco, <b>Rodrigo Aldana-López</b>, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications </i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
+                  <p>  <b>Rodrigo Aldana-López</b>, Jose M. Valencia-Velasco, Omar Longoria-Gandara, Luis Pizano-Escalante, “<b>Digital linear GFSK demodulator for IoT devices</b>”. <i>IET Communications </i>, 2018.<br>[<a style="color:blue" href="publications/iet2018.txt">bibtex</a> | <a style="color:blue" href="https://ietresearch.onlinelibrary.wiley.com/doi/epdf/10.1049/iet-com.2018.5040">publisher link</a>]
                   </p>
                   <br>
                </div>
