added robot2022 paper

--- a/publications.html
+++ b/publications.html
@@ -150,7 +150,11 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-                  <div class="pub_list">
+                  <div class="pub_list">}
+                     <p> Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference </i>, 2022.<br>
+                        [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a>| <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
+                     </p>
+                     <br>
                      <p> <b>Rodrigo Aldana-López</b>, Rosario Aragüés, Carlos Sagüés, “<b>Attention vs. precision: latency scheduling for uncertainty resilient control systems</b>”. <i>59th IEEE Conference on Decision and Control (CDC)</i>, 2020.<br>
                         [<a style="color:blue" href="publications/cdc2020.txt">bibtex</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9304104">publisher link</a>]
                      </p>
