--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
                <hr>
                <br>
                <div class="pub_list">
-                  <p> Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Invited paper to the Special Issue Advanced Motion Control of Multiple Robots, Machines</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
+                  <p> Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Precise Dynamic Consensus under Event-Triggered Communication</b>”. <i>Machines, invited paper to the Special Issue on Advanced Motion Control of Multiple Robots</i>, 2023.<br> [<a style="color:blue" href="publications/machines2023.pdf">pdf</a> | <a style="color:blue" href="publications/machines2023.txt">bibtex</a> | <a style="color:blue" href="https://www.mdpi.com/2075-1702/11/2/128">publisher link</a>]
                   </p>
                   <br>
                   <p> <b>Rodrigo Aldana-López</b>, David Gómez-Gutiérrez, Rosario Aragüés, Carlos Sagüés, “<b>Dynamic consensus with prescribed convergence time for multi-leader formation tracking</b>”. <i>IEEE Control Systems Letters</i>, 2022.<br> [<a style="color:blue" href="publications/lcss2022.pdf">pdf</a> | <a style="color:blue" href="publications/lcss2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2206.11608">arxiv</a> | <a style="color:blue" href="https://ieeexplore.ieee.org/document/9792300">publisher link</a>]
@@ -150,7 +150,7 @@
          <div class="container">
             <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-                  <div class="pub_list">}
+                  <div class="pub_list">
                      <p> Irene Perez-Salesa, <b>Rodrigo Aldana-López</b>, Carlos Sagüés, “<b>Event-Based Visual Tracking in Dynamic Environments</b>”. <i>ROBOT2022: Fifth Iberian Robotics Conference </i>, 2022.<br>
                         [<a style="color:blue" href="publications/robot2022.pdf">pdf</a> | <a style="color:blue" href="publications/robot2022.txt">bibtex</a> | <a style="color:blue" href="https://arxiv.org/abs/2212.07754">arxiv</a>| <a style="color:blue" href="https://link.springer.com/chapter/10.1007/978-3-031-21065-5_15">publisher link</a>]
                      </p>
